--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ software/avr/main_atmega8.lss
 software/avr/main_atmega8.map
 software/avr/main_atmega8.sym
 software/avr/main_atmega8.elf
+*.tmp
+software/avr/bootloader/max-boot.bin
+*.map
+software/avr/bootloader/max-boot.srec
